@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: Apache-2.0
-# SPDX-FileCopyrightText: © 2021 Aalto University
+# SPDX-FileCopyrightText: © 2022 Aalto University
 
 from typing import Callable, Sequence, Any
 
@@ -9,3 +9,4 @@ XlaCustomCallGPU = Callable[[Any, Sequence[bytes], bytes, int], None]
 def cpu_chacha20_block_factory() -> XlaCustomCallCPU: ...
 def gpu_chacha20_block_factory() -> XlaCustomCallGPU: ...
 def cuda_supported() -> bool: ...
+def openmp_accelerated() -> bool: ...
